Add BookService and DB Connection

--- a/E-Commerce/appsettings.Development.json
+++ b/E-Commerce/appsettings.Development.json
@@ -1,4 +1,9 @@
 ﻿{
+  "BooksDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "BookDb",
+    "BooksCollectionName": "Books"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +11,3 @@
     }
   }
 }
-
