--- a/E-Commerce/appsettings.json
+++ b/E-Commerce/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BooksDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "BookDb",
+    "BooksCollectionName": "Books"
+  }
 }
-
